--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
   "main": "index.js",
   "repository": "github:adapt-security/adapt-authoring-courseassets",
   "peerDependencies": {
-    "adapt-authoring-api": "github:adapt-security/adapt-authoring-api",
-    "adapt-authoring-content": "github:adapt-security/adapt-authoring-content",
-    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
-    "adapt-authoring-mongodb": "github:adapt-security/adapt-authoring-mongodb"
+    "adapt-authoring-assets": "^1.3.1",
+    "adapt-authoring-content": "^1.2.3",
+    "adapt-authoring-core": "^1.7.0"
+  },
+  "peerDependenciesMeta": {
+    "adapt-authoring-assets": {
+      "optional": true
+    },
+    "adapt-authoring-content": {
+      "optional": true
+    },
+    "adapt-authoring-core": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
@@ -35,7 +45,15 @@
       ],
       "@semantic-release/npm",
       "@semantic-release/github",
-      "@semantic-release/git"
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json"
+          ],
+          "message": "Chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
     ]
   }
 }
