--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-authoring-courseassets",
   "version": "1.2.2",
-  "description": "Module for managing courseassets",
+  "description": "Module for managing course asset usage",
   "homepage": "https://github.com/adapt-security/adapt-authoring-courseassets",
   "license": "GPL-3.0",
   "type": "module",
