--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "type": "module",
   "main": "index.js",
   "repository": "github:adapt-security/adapt-authoring-courseassets",
+  "dependencies": {
+    "adapt-authoring-api": "^3.0.0"
+  },
   "peerDependencies": {
     "adapt-authoring-assets": "^1.3.1",
     "adapt-authoring-content": "^2.0.0",
